add_executable(asio_thread_pool_test asio_thread_pool_test.cpp)
target_link_libraries(asio_thread_pool_test ${Boost_SYSTEM_LIBRARY} ${CMAKE_THREAD_LIBS_INIT})

add_executable(asio_thread_pool_strand_test asio_thread_pool_strand_test.cpp)
target_link_libraries(asio_thread_pool_strand_test ${Boost_SYSTEM_LIBRARY} ${CMAKE_THREAD_LIBS_INIT})

add_executable(asio_thread_pool_echo_server asio_thread_pool_echo_server.cpp)
target_link_libraries(asio_thread_pool_echo_server ${Boost_SYSTEM_LIBRARY} ${CMAKE_THREAD_LIBS_INIT})

add_executable(asio_io_service_pool_test asio_io_service_pool_test.cpp)
target_link_libraries(asio_io_service_pool_test ${Boost_SYSTEM_LIBRARY} ${CMAKE_THREAD_LIBS_INIT})
